--- a/src/AssisrStarQuiz/AssisrStarQuiz.scss
+++ b/src/AssisrStarQuiz/AssisrStarQuiz.scss
@@ -1,6 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import "./Colors.scss";
+@import "./StarJediSE.scss";
+
+.font-starJediSe {
+    font-family: 'StarJediSE', 'Open Sans', sans-serif;
+}
+
 html,
 body,
-#root {    
+#root,
+.root-star-quiz {    
     height: 100%;
-    background-color: #0a0a0a;
+    background-color: var(--default-background);
+    color: var(--default-foreground);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.2rem;
 }
