:heavy_plus_sign: Added react-router

--- a/src/AssisrStarQuiz/Colors.scss
+++ b/src/AssisrStarQuiz/Colors.scss
@@ -1,5 +1,6 @@
 :root {
     --default-background: #0a0a0a;
     --default-foreground: #EEEEEE;
+    --default-accent: rgb(47, 47, 47);
     --distance-value: 8px;
 }
