--- a/src/AssisrStarQuiz/Components/UI/Button/Button.scss
+++ b/src/AssisrStarQuiz/Components/UI/Button/Button.scss
@@ -5,5 +5,6 @@
     border-radius: var(--distance-value);
     padding: var(--distance-value) calc(var(--distance-value)*2);
     color: var(--default-background);
-    cursor: pointer;
+    cursor: pointer;    
+    text-decoration: none;
 }
