--- a/src/AssisrStarQuiz/Components/Elements/Character/Character.scss
+++ b/src/AssisrStarQuiz/Components/Elements/Character/Character.scss
@@ -13,6 +13,14 @@ $twice-distance-value: calc(var(--distance-value)*2);
         img {
             max-width: 300px;
         }
+
+        .fake {
+            width: 300px;
+            height: 300px;
+            background-color: var(--default-background);
+            border-radius: $twice-distance-value;
+            margin: $twice-distance-value auto;
+        }
     }
 
     .actions {
