:sparkles: Tips now asynchronously load for each character

--- a/src/AssisrStarQuiz/Colors.scss
+++ b/src/AssisrStarQuiz/Colors.scss
@@ -3,4 +3,5 @@
     --default-foreground: #EEEEEE;
     --default-accent: rgb(47, 47, 47);
     --distance-value: 8px;
+    --success: rgb(70, 152, 62);
 }
