--- a/src/AssisrStarQuiz/Colors.scss
+++ b/src/AssisrStarQuiz/Colors.scss
@@ -4,4 +4,5 @@
     --default-accent: rgb(47, 47, 47);
     --distance-value: 8px;
     --success: rgb(70, 152, 62);
+    --danger: rgb(240, 26, 26);
 }
