:heavy_plus_sign: Added open iconic and :recycle: refactored the button component

--- a/src/AssisrStarQuiz/AssisrStarQuiz.scss
+++ b/src/AssisrStarQuiz/AssisrStarQuiz.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import "./Colors.scss";
 @import "./StarJediSE.scss";
+@import "~open-iconic/font/css/open-iconic.css";
 
 .font-starJediSe {
     font-family: 'StarJediSE', 'Open Sans', sans-serif;
