--- a/src/AssisrStarQuiz/Components/Elements/CharacterTip/CharacterTip.scss
+++ b/src/AssisrStarQuiz/Components/Elements/CharacterTip/CharacterTip.scss
@@ -3,6 +3,16 @@
         display: flex;
     }
 
+    .loading {
+        width: 100%;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        > * {
+            margin: var(--distance-value);
+        }
+    }
+
     .image {
         display: table-caption;
 
